#VERSION 0.8.7#

 - fixed method redirect() of Peak_Controller_Front to support an non-array $params

 - fixed method getTitle() in Peak_Controller_Action for Peak internal controller classes

 - deprecated boot.php

 - patched regression problem with recent changes of Peak_View::__get() and Peak_Config::__get()

 - modified method Peak_View::__call() to allow calling helper class like a method with arguments. 
   first argument represent method name and the others , the method arguments.

 - added passing by reference to __get() method in Peak_View

 - modified method Peak_Controller_Internal_PkError::_exception2table()

 - optimized Peak_Core::initConfig() by removing copy of configs array  

 - added passing by reference to __get() method in Peak_Config
 
 - simplified Peak_Exception, added class Peak_Controller_Exception and Peak_View_Exception and modified many classes accordingly

 - modified method Peak_Controller_Front::errorDispath() to return Peak_Application instance

 - fixed method Peak_Application::_construct() due to missing keywork "new" before Peak_Controller_Front object

 - added View helper js

#VERSION 0.8.6#

 - added params to method helper() in Peak_View

 - fixed problem with $params in method Peak_Controller_Front::redirect() and modified method Peak_Router::setRequest() accordingly

 - corrected method name _filter_length() in Peak_Filters_Advanced

 - added method model() in Peak_Controller_Action

 - added method _globalSanitizeRecursive() in Peak_Filters and modified globalSanitize() to support multidimensionnal array

 - added method _filterRecursive() in Peak_Controller_Helper_Post to support multidimensionnal post sanitization

 - added class Peak_Model_Zendatable

 - fixed _filter_float() constant name error in Peak_Filters_Advanced

 - added filter text to Peak_Filters_Advanced

 - added method Peak_Core::init() to emulate boot.php process step by step

 - minor fix to class name in file Peak/Filters/Data.php
